# CzaraEngine

./: .gitmodules  LICENSE  README.md
CzengineNet/: CzengineNet.sln
CzengineNet/MainEngine/: MainEngine.csproj  Program.cs
CzengineNet/MainEngine/window/: SdlWindow.cs  Window.cs  WindowProperties.cs
CzenginePlusPlus/: .gitignore  CzenginePlusPlus.make  Makefile  README.md  build.sh  premake5.lua
CzenginePlusPlus/config/: czengine.config.toml  dependencies.config.toml
CzenginePlusPlus/czengine-interface/: czengine-body-layout.xml  czengine-interface.xml  czengine-main-menu.xml
CzenginePlusPlus/include/core/: app-configuration.hpp  counter.hpp  event-queue.hpp  exception.hpp  floattypes.hpp  inttypes.hpp  result.hpp  shared.hpp  singleton.hpp  wrapper.hpp
CzenginePlusPlus/include/file/: czengine-app-config.hpp  czengine-file.hpp  czengine-ux-file.hpp  czengine-xml.hpp  file-parser.hpp
CzenginePlusPlus/include/interface/: interface.hpp
CzenginePlusPlus/include/window/: sdl-window.hpp  sdl-wrapper.hpp  window.hpp
CzenginePlusPlus/include/windowing-manager/: sdl-window.hpp  window-manager.hpp  window.hpp
CzenginePlusPlus/scripts/: czengine.py  download.py  libfile.py  shared.py
CzenginePlusPlus/src/: czengine.cpp
CzenginePlusPlus/src/core/: app-configuration.cpp  counter.cpp  event-queue.cpp  exception.cpp
CzengineRust/: .gitignore  Cargo.toml
CzengineRust/MainEngine/: Cargo.toml
CzengineRust/RenderHandler/: Cargo.toml
CzengineRust/RenderHandler/src/: lib.rs  render_engine.rs
CzengineRust/WindowHandler/: Cargo.toml
(+60 files in other folders)
