[package]
name = "RenderHandler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkanalia = { version = "=0.23.0", features = ["libloading", "provisional", "window"] }
winit = "0.30.0"
WindowHandler = {path = "../WindowHandler"}
anyhow = "1"
log = "0.4"
